HMeguKin/Parser/Parser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.1.1 from Parser.y
-----------------------------------------------------------------------------

state 35 contains 1 shift/reduce conflicts.
state 101 contains 1 shift/reduce conflicts.
state 132 contains 9 shift/reduce conflicts and 3 reduce/reduce conflicts.
state 157 contains 9 shift/reduce conflicts and 3 reduce/reduce conflicts.
state 158 contains 3 reduce/reduce conflicts.
state 185 contains 1 shift/reduce conflicts.
state 189 contains 1 shift/reduce conflicts.
state 195 contains 1 shift/reduce conflicts.
state 217 contains 1 shift/reduce conflicts.
state 219 contains 1 shift/reduce conflicts.

rule 108 is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parse -> module_statement                   (0)
	module_statement -> data_type                      (1)
	module_statement -> variable_declaration           (2)
	module_statement -> pattern_declaration            (3)
	module_statement -> operator_fixity                (4)
	meta_variable -> Variable                          (5)
	meta_operator -> TokenOperator                     (6)
	meta_operator -> BackTick Variable BackTick        (7)
	pattern_match_variable -> meta_variable            (8)
	pattern_match_hole -> Hole                         (9)
	pattern_match_literal -> UInt                      (10)
	pattern_annotation -> LParen pattern_match Colon type_scheme RParen   (11)
	pattern_match_atom -> pattern_match_literal        (12)
	pattern_match_atom -> pattern_match_variable       (13)
	pattern_match_atom -> pattern_match_hole           (14)
	pattern_match_atom -> parens__pattern_match__      (15)
	pattern_match_atom -> pattern_annotation           (16)
	pattern_as -> meta_variable At pattern_match_atom   (17)
	pattern_as -> pattern_match_atom                   (18)
	pattern_match_application -> Variable list1__pattern_as__   (19)
	pattern_match_application -> pattern_as            (20)
	pattern_match -> pattern_match_application         (21)
	type_record_item -> meta_variable Colon type_expression_inner   (22)
	type_record_inner -> listSepBy1__type_record_item__Comma__   (23)
	type_record -> braces__type_record_inner__         (24)
	type_variable -> meta_variable                     (25)
	type_atom -> type_variable                         (26)
	type_atom -> parens__type_expression_inner__       (27)
	type_atom -> type_record                           (28)
	type_application -> type_atom                      (29)
	type_application -> type_application type_atom     (30)
	type_operators_plus -> type_application            (31)
	type_operators_plus -> type_operators_plus meta_operator type_application   (32)
	type_operators -> type_operators_plus              (33)
	type_expression_inner -> type_operators            (34)
	type_expression_inner -> type_operators RightArrow type_expression_inner   (35)
	type_scheme -> type_expression_inner               (36)
	type_scheme -> Forall type_data_type_args Dot type_expression_inner   (37)
	type_data_type_args -> meta_variable               (38)
	type_data_type_args -> type_data_type_args meta_variable   (39)
	type_expression_inner_sep_comma -> type_expression_inner   (40)
	type_expression_inner_sep_comma -> type_expression_inner_sep_comma Comma type_expression_inner   (41)
	data_type_constructor -> meta_variable             (42)
	data_type_constructor -> meta_variable type_expression_inner_sep_comma   (43)
	data_type_constructor_plus -> data_type_constructor   (44)
	data_type_constructor_plus -> data_type_constructor_plus Comma data_type_constructor   (45)
	data_type -> Data meta_variable list__meta_variable__ data_type_constructor_plus   (46)
	expression_literal -> UInt                         (47)
	expression_variable -> meta_variable               (48)
	expression_record_item -> meta_variable Colon expression   (49)
	expression_record_item -> meta_variable            (50)
	expression_record_inner -> listSepBy1__expression_record_item__Comma__   (51)
	expression_record -> braces__expression_record_inner__   (52)
	expression_record -> LBrace RBrace                 (53)
	expression_record_update_item -> meta_variable Equal expression   (54)
	expression_record_update_inner -> listSepBy1__expression_record_update_item__Comma__   (55)
	expression_record_update -> braces__expression_record_update_inner__   (56)
	expression_operator_parens -> parens__meta_operator__   (57)
	expression_annotation -> expression                (58)
	expression_annotation -> expression Colon type_scheme   (59)
	expression_type_arg -> At type_atom                (60)
	expression_accessor_field -> expression Dot meta_variable   (61)
	expression_accessor_funtion -> Hole Dot meta_variable   (62)
	expression_accessor -> expression_accessor_field   (63)
	expression_accessor -> expression_accessor_funtion   (64)
	expression_atom -> expression_variable             (65)
	expression_atom -> expression_literal              (66)
	expression_atom -> expression_record               (67)
	expression_atom -> expression_record_update        (68)
	expression_atom -> expression_operator_parens      (69)
	expression_atom -> expression_type_arg             (70)
	expression_atom -> expression_accessor             (71)
	expression_atom -> parens__expression_annotation__   (72)
	expression_application -> expression_atom list1__expression_atom__   (73)
	expression_application -> expression_atom          (74)
	expression_operators_plus -> expression_application   (75)
	expression_operators_plus -> expression_operators_plus meta_operator expression_application   (76)
	expression_operators -> expression_operators_plus   (77)
	expression_case_single -> pattern_match RightArrow expression   (78)
	expression_case_single -> pattern_match RightArrow LayoutStart expression LayoutEnd   (79)
	expression_case_cases -> listSepBy1__expression_case_single__LayoutSeparator__   (80)
	expression_case -> Case expression Of expression_case_cases   (81)
	expression_case -> Case LayoutStart expression LayoutEnd Of expression_case_cases   (82)
	expression_case -> Case expression Of LayoutStart expression_case_cases LayoutEnd   (83)
	expression_case -> Case LayoutStart expression LayoutEnd Of LayoutStart expression_case_cases LayoutEnd   (84)
	expression_case -> expression_operators            (85)
	expression_lambda_arguments -> listSepBy1__pattern_match__Comma__   (86)
	expression_lambda -> Lambda expression_lambda_arguments RightArrow expression   (87)
	expression_lambda -> expression_case               (88)
	expression_let_binding -> pattern_match Equal expression   (89)
	expression_let_inside -> listSepBy1__expression_let_binding__LayoutSeparator__   (90)
	expression_let -> Let LayoutStart expression_let_inside LayoutEnd In LayoutStart expression LayoutEnd   (91)
	expression_let -> Let LayoutStart expression_let_inside LayoutEnd In expression   (92)
	expression_let -> Let expression_let_binding In LayoutStart expression LayoutEnd   (93)
	expression_let -> Let expression_let_binding In expression   (94)
	expression_let -> expression_lambda                (95)
	expression -> expression_let                       (96)
	variable_declaration -> meta_variable Colon LayoutStart type_scheme LayoutEnd   (97)
	pattern_declaration -> pattern_match Equal LayoutStart expression LayoutEnd   (98)
	fixity -> Type                                     (99)
	fixity -> Term                                     (100)
	precedence -> Left_                                (101)
	precedence -> Right_                               (102)
	precedence -> None                                 (103)
	operator_fixity -> OperatorKeyword TokenOperator fixity precedence UInt   (104)
	braces__expression_record_inner__ -> LBrace expression_record_inner RBrace   (105)
	braces__expression_record_update_inner__ -> LBrace expression_record_update_inner RBrace   (106)
	braces__type_record_inner__ -> LBrace type_record_inner RBrace   (107)
	list__meta_variable__ -> star__meta_variable__     (108)
	list1__expression_atom__ -> plus__expression_atom__   (109)
	list1__pattern_as__ -> plus__pattern_as__          (110)
	listSepBy1__expression_case_single__LayoutSeparator__ -> sepBy1__expression_case_single__LayoutSeparator__   (111)
	listSepBy1__expression_let_binding__LayoutSeparator__ -> sepBy1__expression_let_binding__LayoutSeparator__   (112)
	listSepBy1__expression_record_item__Comma__ -> sepBy1__expression_record_item__Comma__   (113)
	listSepBy1__expression_record_update_item__Comma__ -> sepBy1__expression_record_update_item__Comma__   (114)
	listSepBy1__pattern_match__Comma__ -> sepBy1__pattern_match__Comma__   (115)
	listSepBy1__type_record_item__Comma__ -> sepBy1__type_record_item__Comma__   (116)
	parens__expression_annotation__ -> LParen expression_annotation RParen   (117)
	parens__meta_operator__ -> LParen meta_operator RParen   (118)
	parens__pattern_match__ -> LParen pattern_match RParen   (119)
	parens__type_expression_inner__ -> LParen type_expression_inner RParen   (120)
	plus__expression_atom__ -> expression_atom         (121)
	plus__expression_atom__ -> plus__expression_atom__ expression_atom   (122)
	plus__pattern_as__ -> pattern_as                   (123)
	plus__pattern_as__ -> plus__pattern_as__ pattern_as   (124)
	sepBy1__expression_case_single__LayoutSeparator__ -> expression_case_single   (125)
	sepBy1__expression_case_single__LayoutSeparator__ -> sepBy1__expression_case_single__LayoutSeparator__ LayoutSeparator expression_case_single   (126)
	sepBy1__expression_let_binding__LayoutSeparator__ -> expression_let_binding   (127)
	sepBy1__expression_let_binding__LayoutSeparator__ -> sepBy1__expression_let_binding__LayoutSeparator__ LayoutSeparator expression_let_binding   (128)
	sepBy1__expression_record_item__Comma__ -> expression_record_item   (129)
	sepBy1__expression_record_item__Comma__ -> sepBy1__expression_record_item__Comma__ Comma expression_record_item   (130)
	sepBy1__expression_record_update_item__Comma__ -> expression_record_update_item   (131)
	sepBy1__expression_record_update_item__Comma__ -> sepBy1__expression_record_update_item__Comma__ Comma expression_record_update_item   (132)
	sepBy1__pattern_match__Comma__ -> pattern_match    (133)
	sepBy1__pattern_match__Comma__ -> sepBy1__pattern_match__Comma__ Comma pattern_match   (134)
	sepBy1__type_record_item__Comma__ -> type_record_item   (135)
	sepBy1__type_record_item__Comma__ -> sepBy1__type_record_item__Comma__ Comma type_record_item   (136)
	star__meta_variable__ ->                           (137)
	star__meta_variable__ -> star__meta_variable__ meta_variable   (138)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	Variable       { TokenVariable _ $$ }
	Hole           { Hole $$ }
	UInt           { LiteralUint _ _ }
	LParen         { LeftParen $$ }
	RParen         { RightParen $$ }
	LBrace         { LeftBrace $$ }
	RBrace         { RightBrace $$ }
	Colon          { Colon $$ }
	Comma          { Comma $$ }
	BackTick       { BackTick $$ }
	LayoutStart    { LayoutStart $$ }
	LayoutSeparator{ LayoutSeparator $$ }
	LayoutEnd      { LayoutEnd $$ }
	RightArrow     { RightArrow $$ }
	TokenOperator  { TokenOperator _ _ }
	Forall         { Forall $$ }
	Dot            { Dot $$ }
	Data           { Data $$ }
	Equal          { Equal $$ }
	At             { At $$ }
	Case           { Case $$ }
	Of             { Of $$ }
	Lambda         { LambdaStart $$ }
	Let            { Let $$ }
	In             { In $$ }
	OperatorKeyword{ OperatorKeyword $$ }
	Type           { Type $$ }
	Term           { Term $$ }
	Left_          { Left_ $$ }
	Right_         { Right_ $$ }
	None           { None $$ }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parse    rule  0
	module_statement rules 1, 2, 3, 4
	meta_variable   rule  5
	meta_operator   rules 6, 7
	pattern_match_variable rule  8
	pattern_match_hole rule  9
	pattern_match_literal rule  10
	pattern_annotation rule  11
	pattern_match_atom rules 12, 13, 14, 15, 16
	pattern_as      rules 17, 18
	pattern_match_application rules 19, 20
	pattern_match   rule  21
	type_record_item rule  22
	type_record_inner rule  23
	type_record     rule  24
	type_variable   rule  25
	type_atom       rules 26, 27, 28
	type_application rules 29, 30
	type_operators_plus rules 31, 32
	type_operators  rule  33
	type_expression_inner rules 34, 35
	type_scheme     rules 36, 37
	type_data_type_args rules 38, 39
	type_expression_inner_sep_comma rules 40, 41
	data_type_constructor rules 42, 43
	data_type_constructor_plus rules 44, 45
	data_type       rule  46
	expression_literal rule  47
	expression_variable rule  48
	expression_record_item rules 49, 50
	expression_record_inner rule  51
	expression_record rules 52, 53
	expression_record_update_item rule  54
	expression_record_update_inner rule  55
	expression_record_update rule  56
	expression_operator_parens rule  57
	expression_annotation rules 58, 59
	expression_type_arg rule  60
	expression_accessor_field rule  61
	expression_accessor_funtion rule  62
	expression_accessor rules 63, 64
	expression_atom rules 65, 66, 67, 68, 69, 70, 71, 72
	expression_application rules 73, 74
	expression_operators_plus rules 75, 76
	expression_operators rule  77
	expression_case_single rules 78, 79
	expression_case_cases rule  80
	expression_case rules 81, 82, 83, 84, 85
	expression_lambda_arguments rule  86
	expression_lambda rules 87, 88
	expression_let_binding rule  89
	expression_let_inside rule  90
	expression_let  rules 91, 92, 93, 94, 95
	expression      rule  96
	variable_declaration rule  97
	pattern_declaration rule  98
	fixity          rules 99, 100
	precedence      rules 101, 102, 103
	operator_fixity rule  104
	braces__expression_record_inner__ rule  105
	braces__expression_record_update_inner__ rule  106
	braces__type_record_inner__ rule  107
	list__meta_variable__ rule  108
	list1__expression_atom__ rule  109
	list1__pattern_as__ rule  110
	listSepBy1__expression_case_single__LayoutSeparator__ rule  111
	listSepBy1__expression_let_binding__LayoutSeparator__ rule  112
	listSepBy1__expression_record_item__Comma__ rule  113
	listSepBy1__expression_record_update_item__Comma__ rule  114
	listSepBy1__pattern_match__Comma__ rule  115
	listSepBy1__type_record_item__Comma__ rule  116
	parens__expression_annotation__ rule  117
	parens__meta_operator__ rule  118
	parens__pattern_match__ rule  119
	parens__type_expression_inner__ rule  120
	plus__expression_atom__ rules 121, 122
	plus__pattern_as__ rules 123, 124
	sepBy1__expression_case_single__LayoutSeparator__ rules 125, 126
	sepBy1__expression_let_binding__LayoutSeparator__ rules 127, 128
	sepBy1__expression_record_item__Comma__ rules 129, 130
	sepBy1__expression_record_update_item__Comma__ rules 131, 132
	sepBy1__pattern_match__Comma__ rules 133, 134
	sepBy1__type_record_item__Comma__ rules 135, 136
	star__meta_variable__ rules 137, 138

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_parse -> . module_statement                  (rule 0)

	Variable       shift, and enter state 18
	Hole           shift, and enter state 19
	UInt           shift, and enter state 20
	LParen         shift, and enter state 21
	Data           shift, and enter state 3
	OperatorKeywordshift, and enter state 22

	module_statementgoto state 4
	meta_variable  goto state 5
	pattern_match_variablegoto state 6
	pattern_match_holegoto state 7
	pattern_match_literalgoto state 8
	pattern_annotationgoto state 9
	pattern_match_atomgoto state 10
	pattern_as     goto state 11
	pattern_match_applicationgoto state 12
	pattern_match  goto state 13
	data_type      goto state 2
	variable_declarationgoto state 14
	pattern_declarationgoto state 15
	operator_fixitygoto state 16
	parens__pattern_match__goto state 17

State 1

	module_statement -> . data_type                     (rule 1)

	Data           shift, and enter state 3

	data_type      goto state 2

State 2

	module_statement -> data_type .                     (rule 1)

	%eof           reduce using rule 1


State 3

	data_type -> Data . meta_variable list__meta_variable__ data_type_constructor_plus    (rule 46)

	Variable       shift, and enter state 29

	meta_variable  goto state 33

State 4

	%start_parse -> module_statement .                  (rule 0)

	%eof           accept


State 5

	pattern_match_variable -> meta_variable .           (rule 8)
	pattern_as -> meta_variable . At pattern_match_atom    (rule 17)
	variable_declaration -> meta_variable . Colon LayoutStart type_scheme LayoutEnd    (rule 97)

	Colon          shift, and enter state 31
	Equal          reduce using rule 8
	At             shift, and enter state 32


State 6

	pattern_match_atom -> pattern_match_variable .      (rule 13)

	Variable       reduce using rule 13
	Hole           reduce using rule 13
	UInt           reduce using rule 13
	LParen         reduce using rule 13
	RParen         reduce using rule 13
	Colon          reduce using rule 13
	Comma          reduce using rule 13
	RightArrow     reduce using rule 13
	Equal          reduce using rule 13


State 7

	pattern_match_atom -> pattern_match_hole .          (rule 14)

	Variable       reduce using rule 14
	Hole           reduce using rule 14
	UInt           reduce using rule 14
	LParen         reduce using rule 14
	RParen         reduce using rule 14
	Colon          reduce using rule 14
	Comma          reduce using rule 14
	RightArrow     reduce using rule 14
	Equal          reduce using rule 14


State 8

	pattern_match_atom -> pattern_match_literal .       (rule 12)

	Variable       reduce using rule 12
	Hole           reduce using rule 12
	UInt           reduce using rule 12
	LParen         reduce using rule 12
	RParen         reduce using rule 12
	Colon          reduce using rule 12
	Comma          reduce using rule 12
	RightArrow     reduce using rule 12
	Equal          reduce using rule 12


State 9

	pattern_match_atom -> pattern_annotation .          (rule 16)

	Variable       reduce using rule 16
	Hole           reduce using rule 16
	UInt           reduce using rule 16
	LParen         reduce using rule 16
	RParen         reduce using rule 16
	Colon          reduce using rule 16
	Comma          reduce using rule 16
	RightArrow     reduce using rule 16
	Equal          reduce using rule 16


State 10

	pattern_as -> pattern_match_atom .                  (rule 18)

	Variable       reduce using rule 18
	Hole           reduce using rule 18
	UInt           reduce using rule 18
	LParen         reduce using rule 18
	RParen         reduce using rule 18
	Colon          reduce using rule 18
	Comma          reduce using rule 18
	RightArrow     reduce using rule 18
	Equal          reduce using rule 18


State 11

	pattern_match_application -> pattern_as .           (rule 20)

	RParen         reduce using rule 20
	Colon          reduce using rule 20
	Comma          reduce using rule 20
	RightArrow     reduce using rule 20
	Equal          reduce using rule 20


State 12

	pattern_match -> pattern_match_application .        (rule 21)

	RParen         reduce using rule 21
	Colon          reduce using rule 21
	Comma          reduce using rule 21
	RightArrow     reduce using rule 21
	Equal          reduce using rule 21


State 13

	pattern_declaration -> pattern_match . Equal LayoutStart expression LayoutEnd    (rule 98)

	Equal          shift, and enter state 30


State 14

	module_statement -> variable_declaration .          (rule 2)

	%eof           reduce using rule 2


State 15

	module_statement -> pattern_declaration .           (rule 3)

	%eof           reduce using rule 3


State 16

	module_statement -> operator_fixity .               (rule 4)

	%eof           reduce using rule 4


State 17

	pattern_match_atom -> parens__pattern_match__ .     (rule 15)

	Variable       reduce using rule 15
	Hole           reduce using rule 15
	UInt           reduce using rule 15
	LParen         reduce using rule 15
	RParen         reduce using rule 15
	Colon          reduce using rule 15
	Comma          reduce using rule 15
	RightArrow     reduce using rule 15
	Equal          reduce using rule 15


State 18

	meta_variable -> Variable .                         (rule 5)
	pattern_match_application -> Variable . list1__pattern_as__    (rule 19)

	Variable       shift, and enter state 29
	Hole           shift, and enter state 19
	UInt           shift, and enter state 20
	LParen         shift, and enter state 21
	RParen         reduce using rule 5
	Colon          reduce using rule 5
	Comma          reduce using rule 5
	RightArrow     reduce using rule 5
	Equal          reduce using rule 5
	At             reduce using rule 5

	meta_variable  goto state 24
	pattern_match_variablegoto state 6
	pattern_match_holegoto state 7
	pattern_match_literalgoto state 8
	pattern_annotationgoto state 9
	pattern_match_atomgoto state 10
	pattern_as     goto state 26
	list1__pattern_as__goto state 27
	parens__pattern_match__goto state 17
	plus__pattern_as__goto state 28

State 19

	pattern_match_hole -> Hole .                        (rule 9)

	Variable       reduce using rule 9
	Hole           reduce using rule 9
	UInt           reduce using rule 9
	LParen         reduce using rule 9
	RParen         reduce using rule 9
	Colon          reduce using rule 9
	Comma          reduce using rule 9
	RightArrow     reduce using rule 9
	Equal          reduce using rule 9


State 20

	pattern_match_literal -> UInt .                     (rule 10)

	Variable       reduce using rule 10
	Hole           reduce using rule 10
	UInt           reduce using rule 10
	LParen         reduce using rule 10
	RParen         reduce using rule 10
	Colon          reduce using rule 10
	Comma          reduce using rule 10
	RightArrow     reduce using rule 10
	Equal          reduce using rule 10


State 21

	pattern_annotation -> LParen . pattern_match Colon type_scheme RParen    (rule 11)
	parens__pattern_match__ -> LParen . pattern_match RParen    (rule 119)

	Variable       shift, and enter state 18
	Hole           shift, and enter state 19
	UInt           shift, and enter state 20
	LParen         shift, and enter state 21

	meta_variable  goto state 24
	pattern_match_variablegoto state 6
	pattern_match_holegoto state 7
	pattern_match_literalgoto state 8
	pattern_annotationgoto state 9
	pattern_match_atomgoto state 10
	pattern_as     goto state 11
	pattern_match_applicationgoto state 12
	pattern_match  goto state 25
	parens__pattern_match__goto state 17

State 22

	operator_fixity -> OperatorKeyword . TokenOperator fixity precedence UInt    (rule 104)

	TokenOperator  shift, and enter state 23


State 23

	operator_fixity -> OperatorKeyword TokenOperator . fixity precedence UInt    (rule 104)

	Type           shift, and enter state 44
	Term           shift, and enter state 45

	fixity         goto state 43

State 24

	pattern_match_variable -> meta_variable .           (rule 8)
	pattern_as -> meta_variable . At pattern_match_atom    (rule 17)

	Variable       reduce using rule 8
	Hole           reduce using rule 8
	UInt           reduce using rule 8
	LParen         reduce using rule 8
	RParen         reduce using rule 8
	Colon          reduce using rule 8
	Comma          reduce using rule 8
	RightArrow     reduce using rule 8
	Equal          reduce using rule 8
	At             shift, and enter state 32


State 25

	pattern_annotation -> LParen pattern_match . Colon type_scheme RParen    (rule 11)
	parens__pattern_match__ -> LParen pattern_match . RParen    (rule 119)

	RParen         shift, and enter state 41
	Colon          shift, and enter state 42


State 26

	plus__pattern_as__ -> pattern_as .                  (rule 123)

	Variable       reduce using rule 123
	Hole           reduce using rule 123
	UInt           reduce using rule 123
	LParen         reduce using rule 123
	RParen         reduce using rule 123
	Colon          reduce using rule 123
	Comma          reduce using rule 123
	RightArrow     reduce using rule 123
	Equal          reduce using rule 123


State 27

	pattern_match_application -> Variable list1__pattern_as__ .    (rule 19)

	RParen         reduce using rule 19
	Colon          reduce using rule 19
	Comma          reduce using rule 19
	RightArrow     reduce using rule 19
	Equal          reduce using rule 19


State 28

	list1__pattern_as__ -> plus__pattern_as__ .         (rule 110)
	plus__pattern_as__ -> plus__pattern_as__ . pattern_as    (rule 124)

	Variable       shift, and enter state 29
	Hole           shift, and enter state 19
	UInt           shift, and enter state 20
	LParen         shift, and enter state 21
	RParen         reduce using rule 110
	Colon          reduce using rule 110
	Comma          reduce using rule 110
	RightArrow     reduce using rule 110
	Equal          reduce using rule 110

	meta_variable  goto state 24
	pattern_match_variablegoto state 6
	pattern_match_holegoto state 7
	pattern_match_literalgoto state 8
	pattern_annotationgoto state 9
	pattern_match_atomgoto state 10
	pattern_as     goto state 40
	parens__pattern_match__goto state 17

State 29

	meta_variable -> Variable .                         (rule 5)

	Variable       reduce using rule 5
	Hole           reduce using rule 5
	UInt           reduce using rule 5
	LParen         reduce using rule 5
	RParen         reduce using rule 5
	LBrace         reduce using rule 5
	RBrace         reduce using rule 5
	Colon          reduce using rule 5
	Comma          reduce using rule 5
	BackTick       reduce using rule 5
	LayoutSeparatorreduce using rule 5
	LayoutEnd      reduce using rule 5
	RightArrow     reduce using rule 5
	TokenOperator  reduce using rule 5
	Dot            reduce using rule 5
	Equal          reduce using rule 5
	At             reduce using rule 5
	Case           reduce using rule 5
	Of             reduce using rule 5
	Lambda         reduce using rule 5
	Let            reduce using rule 5
	In             reduce using rule 5
	%eof           reduce using rule 5


State 30

	pattern_declaration -> pattern_match Equal . LayoutStart expression LayoutEnd    (rule 98)

	LayoutStart    shift, and enter state 39


State 31

	variable_declaration -> meta_variable Colon . LayoutStart type_scheme LayoutEnd    (rule 97)

	LayoutStart    shift, and enter state 38


State 32

	pattern_as -> meta_variable At . pattern_match_atom    (rule 17)

	Variable       shift, and enter state 29
	Hole           shift, and enter state 19
	UInt           shift, and enter state 20
	LParen         shift, and enter state 21

	meta_variable  goto state 36
	pattern_match_variablegoto state 6
	pattern_match_holegoto state 7
	pattern_match_literalgoto state 8
	pattern_annotationgoto state 9
	pattern_match_atomgoto state 37
	parens__pattern_match__goto state 17

State 33

	data_type -> Data meta_variable . list__meta_variable__ data_type_constructor_plus    (rule 46)

	Variable       reduce using rule 137

	list__meta_variable__goto state 34
	star__meta_variable__goto state 35

State 34

	data_type -> Data meta_variable list__meta_variable__ . data_type_constructor_plus    (rule 46)

	Variable       shift, and enter state 29

	meta_variable  goto state 96
	data_type_constructorgoto state 97
	data_type_constructor_plusgoto state 98

State 35

	list__meta_variable__ -> star__meta_variable__ .    (rule 108)
	star__meta_variable__ -> star__meta_variable__ . meta_variable    (rule 138)

	Variable       shift, and enter state 29
			(reduce using rule 108)


	meta_variable  goto state 95

State 36

	pattern_match_variable -> meta_variable .           (rule 8)

	Variable       reduce using rule 8
	Hole           reduce using rule 8
	UInt           reduce using rule 8
	LParen         reduce using rule 8
	RParen         reduce using rule 8
	Colon          reduce using rule 8
	Comma          reduce using rule 8
	RightArrow     reduce using rule 8
	Equal          reduce using rule 8


State 37

	pattern_as -> meta_variable At pattern_match_atom .    (rule 17)

	Variable       reduce using rule 17
	Hole           reduce using rule 17
	UInt           reduce using rule 17
	LParen         reduce using rule 17
	RParen         reduce using rule 17
	Colon          reduce using rule 17
	Comma          reduce using rule 17
	RightArrow     reduce using rule 17
	Equal          reduce using rule 17


State 38

	variable_declaration -> meta_variable Colon LayoutStart . type_scheme LayoutEnd    (rule 97)

	Variable       shift, and enter state 29
	LParen         shift, and enter state 61
	LBrace         shift, and enter state 62
	Forall         shift, and enter state 63

	meta_variable  goto state 50
	type_record    goto state 51
	type_variable  goto state 52
	type_atom      goto state 53
	type_applicationgoto state 54
	type_operators_plusgoto state 55
	type_operators goto state 56
	type_expression_innergoto state 57
	type_scheme    goto state 94
	braces__type_record_inner__goto state 59
	parens__type_expression_inner__goto state 60

State 39

	pattern_declaration -> pattern_match Equal LayoutStart . expression LayoutEnd    (rule 98)

	Variable       shift, and enter state 29
	Hole           shift, and enter state 86
	UInt           shift, and enter state 87
	LParen         shift, and enter state 88
	LBrace         shift, and enter state 89
	At             shift, and enter state 90
	Case           shift, and enter state 91
	Lambda         shift, and enter state 92
	Let            shift, and enter state 93

	meta_variable  goto state 64
	expression_literalgoto state 65
	expression_variablegoto state 66
	expression_recordgoto state 67
	expression_record_updategoto state 68
	expression_operator_parensgoto state 69
	expression_type_arggoto state 70
	expression_accessor_fieldgoto state 71
	expression_accessor_funtiongoto state 72
	expression_accessorgoto state 73
	expression_atomgoto state 74
	expression_applicationgoto state 75
	expression_operators_plusgoto state 76
	expression_operatorsgoto state 77
	expression_casegoto state 78
	expression_lambdagoto state 79
	expression_let goto state 80
	expression     goto state 81
	braces__expression_record_inner__goto state 82
	braces__expression_record_update_inner__goto state 83
	parens__expression_annotation__goto state 84
	parens__meta_operator__goto state 85

State 40

	plus__pattern_as__ -> plus__pattern_as__ pattern_as .    (rule 124)

	Variable       reduce using rule 124
	Hole           reduce using rule 124
	UInt           reduce using rule 124
	LParen         reduce using rule 124
	RParen         reduce using rule 124
	Colon          reduce using rule 124
	Comma          reduce using rule 124
	RightArrow     reduce using rule 124
	Equal          reduce using rule 124


State 41

	parens__pattern_match__ -> LParen pattern_match RParen .    (rule 119)

	Variable       reduce using rule 119
	Hole           reduce using rule 119
	UInt           reduce using rule 119
	LParen         reduce using rule 119
	RParen         reduce using rule 119
	Colon          reduce using rule 119
	Comma          reduce using rule 119
	RightArrow     reduce using rule 119
	Equal          reduce using rule 119


State 42

	pattern_annotation -> LParen pattern_match Colon . type_scheme RParen    (rule 11)

	Variable       shift, and enter state 29
	LParen         shift, and enter state 61
	LBrace         shift, and enter state 62
	Forall         shift, and enter state 63

	meta_variable  goto state 50
	type_record    goto state 51
	type_variable  goto state 52
	type_atom      goto state 53
	type_applicationgoto state 54
	type_operators_plusgoto state 55
	type_operators goto state 56
	type_expression_innergoto state 57
	type_scheme    goto state 58
	braces__type_record_inner__goto state 59
	parens__type_expression_inner__goto state 60

State 43

	operator_fixity -> OperatorKeyword TokenOperator fixity . precedence UInt    (rule 104)

	Left_          shift, and enter state 47
	Right_         shift, and enter state 48
	None           shift, and enter state 49

	precedence     goto state 46

State 44

	fixity -> Type .                                    (rule 99)

	Left_          reduce using rule 99
	Right_         reduce using rule 99
	None           reduce using rule 99


State 45

	fixity -> Term .                                    (rule 100)

	Left_          reduce using rule 100
	Right_         reduce using rule 100
	None           reduce using rule 100


State 46

	operator_fixity -> OperatorKeyword TokenOperator fixity precedence . UInt    (rule 104)

	UInt           shift, and enter state 148


State 47

	precedence -> Left_ .                               (rule 101)

	UInt           reduce using rule 101


State 48

	precedence -> Right_ .                              (rule 102)

	UInt           reduce using rule 102


State 49

	precedence -> None .                                (rule 103)

	UInt           reduce using rule 103


State 50

	type_variable -> meta_variable .                    (rule 25)

	Variable       reduce using rule 25
	Hole           reduce using rule 25
	UInt           reduce using rule 25
	LParen         reduce using rule 25
	RParen         reduce using rule 25
	LBrace         reduce using rule 25
	RBrace         reduce using rule 25
	Colon          reduce using rule 25
	Comma          reduce using rule 25
	BackTick       reduce using rule 25
	LayoutSeparatorreduce using rule 25
	LayoutEnd      reduce using rule 25
	RightArrow     reduce using rule 25
	TokenOperator  reduce using rule 25
	Dot            reduce using rule 25
	At             reduce using rule 25
	Case           reduce using rule 25
	Of             reduce using rule 25
	Lambda         reduce using rule 25
	Let            reduce using rule 25
	In             reduce using rule 25
	%eof           reduce using rule 25


State 51

	type_atom -> type_record .                          (rule 28)

	Variable       reduce using rule 28
	Hole           reduce using rule 28
	UInt           reduce using rule 28
	LParen         reduce using rule 28
	RParen         reduce using rule 28
	LBrace         reduce using rule 28
	RBrace         reduce using rule 28
	Colon          reduce using rule 28
	Comma          reduce using rule 28
	BackTick       reduce using rule 28
	LayoutSeparatorreduce using rule 28
	LayoutEnd      reduce using rule 28
	RightArrow     reduce using rule 28
	TokenOperator  reduce using rule 28
	Dot            reduce using rule 28
	At             reduce using rule 28
	Case           reduce using rule 28
	Of             reduce using rule 28
	Lambda         reduce using rule 28
	Let            reduce using rule 28
	In             reduce using rule 28
	%eof           reduce using rule 28


State 52

	type_atom -> type_variable .                        (rule 26)

	Variable       reduce using rule 26
	Hole           reduce using rule 26
	UInt           reduce using rule 26
	LParen         reduce using rule 26
	RParen         reduce using rule 26
	LBrace         reduce using rule 26
	RBrace         reduce using rule 26
	Colon          reduce using rule 26
	Comma          reduce using rule 26
	BackTick       reduce using rule 26
	LayoutSeparatorreduce using rule 26
	LayoutEnd      reduce using rule 26
	RightArrow     reduce using rule 26
	TokenOperator  reduce using rule 26
	Dot            reduce using rule 26
	At             reduce using rule 26
	Case           reduce using rule 26
	Of             reduce using rule 26
	Lambda         reduce using rule 26
	Let            reduce using rule 26
	In             reduce using rule 26
	%eof           reduce using rule 26


State 53

	type_application -> type_atom .                     (rule 29)

	Variable       reduce using rule 29
	LParen         reduce using rule 29
	RParen         reduce using rule 29
	LBrace         reduce using rule 29
	RBrace         reduce using rule 29
	Comma          reduce using rule 29
	BackTick       reduce using rule 29
	LayoutEnd      reduce using rule 29
	RightArrow     reduce using rule 29
	TokenOperator  reduce using rule 29
	%eof           reduce using rule 29


State 54

	type_application -> type_application . type_atom    (rule 30)
	type_operators_plus -> type_application .           (rule 31)
